--- a/views/personal_editar.html
+++ b/views/personal_editar.html
@@ -2,8 +2,8 @@
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Form Stuff</a></li>
-        <li class="active">Form Elements</li>
+        <li><a href="javascript:;">Personal</a></li>
+        <li class="active">Edición</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
