--- a/views/personal_limitaciones.html
+++ b/views/personal_limitaciones.html
@@ -3,11 +3,11 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Personal</a></li>
-        <li class="active">Tabla Personal</li>
+        <li class="active">Limitaciones</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tabla Personal <small>Servicio de Transporte</small></h1>
+    <h1 class="page-header">Personal Limitaciones<small>Seguridad Trabajadores</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
