--- a/views/personal_restricciones.html
+++ b/views/personal_restricciones.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div ng-controller="tablaPersonalDefaultController">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Personal</a></li>
+        <li class="active">Restricciones</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Personal Restricciones <small>Seguridad Trabajadores</small></h1>
+    <!-- end page-header -->
 
-</body>
-</html>
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-6 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Personal </h4>
+                </div>
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Rut</th>
+                            <th>Nombre</th>
+                            <th>Proveedor</th>
+                            <th>Restriccion</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>14558557</td>
+                            <td>Juan Carlos Matamala Duran</td>
+                            <td>FEDEX</td>
+                            <td>Vehiculos Pesados</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>14558558</td>
+                            <td>Jorje Juan Matamala Duran</td>
+                            <td>FEDEX</td>
+                            <td>Maquinaria Pesada</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>10534557</td>
+                            <td>Carlos Miranda Miranda</td>
+                            <td>ChileExpress</td>
+                            <td>Ninguna</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
