--- a/views/contrato_todos.html
+++ b/views/contrato_todos.html
@@ -56,8 +56,32 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td>10534557</td>
-                            <td>Carlos Miranda Miranda</td>
-                            <td>ChileExpress</td>
+                            <td>George Sanchez Miranda</td>
+                            <td>Transportes del Pecifico</td>
+                            <td>02/10/2005</td>
+                            <td>22/10/2017</td>
+                            <td>Plazo Fijo</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>14558557</td>
+                            <td>Jonh Michael Fant</td>
+                            <td>Transportes del Pacifico</td>
+                            <td>04/09/2001</td>
+                            <td>Vigente</td>
+                            <td>Indefinido</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>10458558</td>
+                            <td>Robert Pauli Strong</td>
+                            <td>Transportes El Rapido</td>
+                            <td>01/11/2009</td>
+                            <td>Vigente</td>
+                            <td>Indefinido</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>17534557</td>
+                            <td>Sebastian Valde Caldera</td>
+                            <td>Trasporte El Rapido</td>
                             <td>22/10/2015</td>
                             <td>22/10/2016</td>
                             <td>Plazo Fijo</td>
