--- a/views/contrato_crear.html
+++ b/views/contrato_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="personalEditaController">
+<div ng-controller="formPluginsController">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
