--- a/views/contrato_crear.html
+++ b/views/contrato_crear.html
@@ -42,26 +42,18 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-3">Fecha Incorporacion</label>
-                            <div class="col-md-5">
-                                <div class="input-group date" id="datetimepicker1">
-                                    <input type="text" class="form-control" />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
+                            <label class="col-md-4 control-label">Default Datepicker</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="datepicker-default" placeholder="Select Date" value="04/1/2014" />
                             </div>
+
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-3">Fecha Termino</label>
-                            <div class="col-md-5">
-                                <div class="input-group date" id="datetimepicker2">
-                                    <input type="text" class="form-control" />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
+                            <label class="col-md-4 control-label">Default Datepicker</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="datepicker-default2" placeholder="Select Date" value="04/1/2014" />
                             </div>
+
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Tipo de Contrato</label>
