--- a/views/contrato_crear.html
+++ b/views/contrato_crear.html
@@ -42,16 +42,16 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-4 control-label">Default Datepicker</label>
+                            <label class="col-md-3 control-label">Fecha Incorporacion</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" id="datepicker-default" placeholder="Select Date" value="04/1/2014" />
+                                <input type="text" class="form-control" id="datepicker-default" placeholder="Eliga Fecha" value="01/11/2016" />
                             </div>
 
                         </div>
                         <div class="form-group">
-                            <label class="col-md-4 control-label">Default Datepicker</label>
+                            <label class="col-md-3 control-label">Fecha Termino</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" id="datepicker-default2" placeholder="Select Date" value="04/1/2014" />
+                                <input type="text" class="form-control" id="datepicker-default2" placeholder="Elija Fecha" value="01/11/2016" />
                             </div>
 
                         </div>
