--- a/views/contrato_crear.html
+++ b/views/contrato_crear.html
@@ -68,9 +68,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Submit</label>
+                            <label class="col-md-3 control-label">Guardar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success">Submit Button</button>
+                                <button type="submit" class="btn btn-sm btn-success">Enviar</button>
                             </div>
                         </div>
                     </form>
