--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -162,28 +162,16 @@
                     <li ui-sref-active="active"><a ui-sref="app.gallery.v2">Gallery v2</a></li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.options')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.moneda_tipo')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-euro"></i>
                     <span>Moneda</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageBlank">Blank Page</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithFooter">Page with Footer</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithoutSidebar">Page without Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithRightSidebar">Page with Right Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithMinifiedSidebar">Page with Minified Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithTwoSidebar">Page with Two Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageFullHeightContent">Full Height Content</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithWideSidebar">Page with Wide Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithLightSidebar">Page with Light Sidebar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithMegaMenu">Page with Mega Menu</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithTopMenu">Page with Top Menu</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithBoxedLayout">Page with Boxed Layout</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithMixedMenu">Page with Mixed Menu</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithBoxedMixedMenu">Boxed Layout with Mixed Menu</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.options.pageWithTransparentSidebar">Page with Transparent Sidebar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todo">Moneda Tipos</a></li>
+
+
                 </ul>
             </li>
          
