--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -169,7 +169,7 @@
                     <span>Moneda</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todo">Moneda Tipos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
 
 
                 </ul>
