--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -23,7 +23,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Tabla Personal </h4>
+                    <h4 class="panel-title">Tabla Personal {{5+5}}</h4>
                 </div>
                 <div class="panel-body">
                     <table id="data-table" class="table table-striped table-bordered">
