test contrato get

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -1,4 +1,4 @@
-<div ng-controller="tablaMonedaTipoDefaultController">
+<div ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
