--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -1,54 +1,56 @@
-<div ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
-    <!-- begin breadcrumb -->
-    <ol class="breadcrumb pull-right">
-        <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Contrato</a></li>
-        <li class="active">Tabla Contratos</li>
-    </ol>
-    <!-- end breadcrumb -->
-    <!-- begin page-header -->
-    <h1 class="page-header">Tabla Personal <small>Servicio de Transporte</small></h1>
-    <!-- end page-header -->
 
-    <!-- begin row -->
-    <div class="row">
-        <!-- begin col-6 -->
-        <div class="col-md-12">
-            <!-- begin panel -->
-            <div class="panel panel-inverse">
-                <div class="panel-heading">
-                    <div class="panel-heading-btn">
-                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
-                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
-                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
-                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
-                    </div>
-                    <h4 class="panel-title">Tabla Personal {{8+8}}</h4>
-                </div>
-                <div class="panel-body">
-                    <table id="data-table" class="table table-striped table-bordered">
-                        <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nombre Moneda</th>
-                            <th>Codigo</th>
-                            <th>Pais</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr ng-repeat="item in monedas_tipo" class="odd gradeX">
-                            <td>{{item.monet_id}}</td>
-                            <td>{{item.monet_nombre}}</td>
-                            <td>{{item.monet_codigo}}</td>
-                            <td>{{item.monet_pais}}</td>
-                        </tr>
-
-                        </tbody>
-                    </table>
-                </div>
+<div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
+    <h1> Monetas Tipo </h1>
+    <form action="javascript:void(0);">
+        <div class="row">
+            <div class="span4">
+                <label> ID Moneda </label>
+                <input type="text" ng-model="monet_id" />
             </div>
-            <!-- end panel -->
+            <div class="span4">
+                <label> Nombre </label>
+                <input type="text" ng-model="monet_nombre" />
+            </div>
+            <div class="span4">
+                <label> Codigo </label>
+                <input type="text" ng-model="monet_codigo" />
+            </div>
         </div>
-    </div>
-    <!-- end row -->
+        <div class="row">
+            <div class="span4">
+                <label> Pais </label>
+                <input type="text" ng-model="monet_pais" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="span4">
+                <input type="submit" value="Guardar" class="btn btn-success" ng-click="guardarMoneda_Tipo()" />
+                <input type="button" value="Limpiar" class="btn btn-danger" ng-click="limpiarDatos()" />
+            </div>
+        </div>
+    </form>
+    <table class="table">
+        <thead>
+        <tr>
+            <th> ID </th>
+            <th> Nombre </th>
+            <th> Codigo ISO </th>
+            <th> Pais</th>
+            <th>  </th>
+            <th>  </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in sgt_monedas_tipo">
+            <td> {{item.monet_id}} </td>
+            <td> {{item.monet_nombre}} </td>
+            <td> {{item.monet_codigo}} </td>
+            <td> {{item.monet_pais}} </td>
+            <td> <a href="javascript:void(0);" class="btn btn-info" ng-click="recuperarMoneda_Tipo(item._id)"> Editar </a> </td>
+            <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
+</body>
+</html>
