--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -1,5 +1,14 @@
 
 <div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Tables</a></li>
+        <li class="active">Basic Tables</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Basic Tables <small>header small text goes here...</small></h1>
+    <!-- end page-header -->
     <h1> Monetas Tipo </h1>
     <form action="javascript:void(0);">
         <div class="row">
@@ -29,6 +38,7 @@
             </div>
         </div>
     </form>
+
     <table class="table">
         <thead>
         <tr>
