--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -9,35 +9,54 @@
     <!-- begin page-header -->
     <h1 class="page-header">Basic Tables <small>header small text goes here...</small></h1>
     <!-- end page-header -->
-    <h1> Monetas Tipo </h1>
-    <form action="javascript:void(0);">
-        <div class="row">
-            <div class="span4">
-                <label> ID Moneda </label>
-                <input type="text" ng-model="monet_id" />
+    <div class="row">
+        <!-- begin col-6 -->
+        <div class="col-md-6">
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="table-basic-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Default Table</h4>
+                </div>
+                <div class="panel-body">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Username</th>
+                            <th>Email Address</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Nicky Almera</td>
+                            <td>nicky@hotmail.com</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Edmund Wong</td>
+                            <td>edmund@yahoo.com</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Harvinder Singh</td>
+                            <td>harvinder@gmail.com</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Terry Khoo</td>
+                            <td>terry@gmail.com</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div class="span4">
-                <label> Nombre </label>
-                <input type="text" ng-model="monet_nombre" />
-            </div>
-            <div class="span4">
-                <label> Codigo </label>
-                <input type="text" ng-model="monet_codigo" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="span4">
-                <label> Pais </label>
-                <input type="text" ng-model="monet_pais" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="span4">
-                <input type="submit" value="Guardar" class="btn btn-success" ng-click="guardarMoneda_Tipo()" />
-                <input type="button" value="Limpiar" class="btn btn-danger" ng-click="limpiarDatos()" />
-            </div>
-        </div>
-    </form>
 
     <table class="table">
         <thead>
