--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -11,7 +11,7 @@
     <!-- end page-header -->
     <div class="row">
         <!-- begin col-6 -->
-        <div class="col-md-6">
+        <div class="col-md-9">
             <!-- begin panel -->
             <div class="panel panel-inverse" data-sortable-id="table-basic-1">
                 <div class="panel-heading">
@@ -27,36 +27,30 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Username</th>
-                            <th>Email Address</th>
+                            <th> ID </th>
+                            <th> Nombre </th>
+                            <th> Codigo ISO </th>
+                            <th> Pais</th>
+                            <th>  </th>
+                            <th>  </th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Nicky Almera</td>
-                            <td>nicky@hotmail.com</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Edmund Wong</td>
-                            <td>edmund@yahoo.com</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Harvinder Singh</td>
-                            <td>harvinder@gmail.com</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Terry Khoo</td>
-                            <td>terry@gmail.com</td>
+                        <tr ng-repeat="item in sgt_monedas_tipo">
+                            <td> {{item.monet_id}} </td>
+                            <td> {{item.monet_nombre}} </td>
+                            <td> {{item.monet_codigo}} </td>
+                            <td> {{item.monet_pais}} </td>
+                            <td> <a href="javascript:void(0);" class="btn btn-info" ng-click="recuperarMoneda_Tipo(item._id)"> Editar </a> </td>
+                            <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
     <table class="table">
         <thead>
@@ -81,5 +75,3 @@
         </tbody>
     </table>
 </div>
-</body>
-</html>
