--- a/views/moneda_tipo_crear.html
+++ b/views/moneda_tipo_crear.html
@@ -1,21 +1,19 @@
-<div ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
-    <!-- begin breadcrumb -->
+
+<div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Contrato</a></li>
-        <li class="active">Tabla Contratos</li>
+        <li><a href="javascript:;">Tables</a></li>
+        <li class="active">Basic Tables</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tabla Personal <small>Servicio de Transporte</small></h1>
+    <h1 class="page-header">Basic Tables <small>header small text goes here...</small></h1>
     <!-- end page-header -->
-
-    <!-- begin row -->
     <div class="row">
         <!-- begin col-6 -->
         <div class="col-md-12">
             <!-- begin panel -->
-            <div class="panel panel-inverse">
+            <div class="panel panel-inverse" data-sortable-id="table-basic-1">
                 <div class="panel-heading">
                     <div class="panel-heading-btn">
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
@@ -23,32 +21,34 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Tabla Personal {{8+8}}</h4>
+                    <h4 class="panel-title">Default Table</h4>
                 </div>
                 <div class="panel-body">
-                    <table id="data-table" class="table table-striped table-bordered">
+                    <table class="table">
                         <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Nombre Moneda</th>
-                            <th>Codigo</th>
-                            <th>Pais</th>
+                            <th> ID </th>
+                            <th> Nombre </th>
+                            <th> Codigo ISO </th>
+                            <th> Pais</th>
+                            <th>  </th>
+                            <th>  </th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="item in monedas_tipo" class="odd gradeX">
-                            <td>{{item.monet_id}}</td>
-                            <td>{{item.monet_nombre}}</td>
-                            <td>{{item.monet_codigo}}</td>
-                            <td>{{item.monet_pais}}</td>
+                        <tr ng-repeat="item in sgt_monedas_tipo">
+                            <td> {{item.monet_id}} </td>
+                            <td> {{item.monet_nombre}} </td>
+                            <td> {{item.monet_codigo}} </td>
+                            <td> {{item.monet_pais}} </td>
+                            <td> <a href="javascript:void(0);" class="btn btn-info" ng-click="recuperarMoneda_Tipo(item._id)"> Editar </a> </td>
+                            <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
                         </tr>
-
                         </tbody>
                     </table>
                 </div>
             </div>
-            <!-- end panel -->
         </div>
     </div>
-    <!-- end row -->
 </div>
+
