--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -1,19 +1,21 @@
-
-<div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
+<div ng-controller="tablamonedatipodefaultcontroller" ng-init="cargarMonedas_Tipo()">
+    <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Tables</a></li>
-        <li class="active">Basic Tables</li>
+        <li><a href="javascript:;">Personal</a></li>
+        <li class="active">Tabla Personal</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Basic Tables <small>header small text goes here...</small></h1>
+    <h1 class="page-header">Tabla Personal <small>Servicio de Transporte</small></h1>
     <!-- end page-header -->
+
+    <!-- begin row -->
     <div class="row">
         <!-- begin col-6 -->
         <div class="col-md-12">
             <!-- begin panel -->
-            <div class="panel panel-inverse" data-sortable-id="table-basic-1">
+            <div class="panel panel-inverse">
                 <div class="panel-heading">
                     <div class="panel-heading-btn">
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
@@ -21,10 +23,10 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Default Table</h4>
+                    <h4 class="panel-title">Tabla Personal </h4>
                 </div>
                 <div class="panel-body">
-                    <table class="table">
+                    <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
                             <th> ID </th>
@@ -44,11 +46,13 @@
                             <td> <a href="javascript:void(0);" class="btn btn-info" ng-click="recuperarMoneda_Tipo(item._id)"> Editar </a> </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
                         </tr>
+
                         </tbody>
                     </table>
                 </div>
             </div>
+            <!-- end panel -->
         </div>
     </div>
+    <!-- end row -->
 </div>
-
