--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -24,7 +24,7 @@
                     <h4 class="panel-title">Default Table</h4>
                 </div>
                 <div class="panel-body">
-                    <table class="table">
+                    <table class="table table-striped" >
                         <thead>
                         <tr>
                             <th> ID </th>
