table monedas finished

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -2,15 +2,17 @@
 <div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
-        <li><a href="javascript:;">Tables</a></li>
-        <li class="active">Basic Tables</li>
+        <li><a href="javascript:;">Monedas</a></li>
+        <li class="active">Tabla Monedas Tipo</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Basic Tables <small>header small text goes here...</small></h1>
+    <h1 class="page-header">Tabla Monedas Tipo <small>Gestion de Pagos</small></h1>
     <!-- end page-header -->
+
+    <!-- begin row -->
     <div class="row">
-        <!-- begin col-6 -->
+        <!-- begin col-12 -->
         <div class="col-md-12">
             <!-- begin panel -->
             <div class="panel panel-inverse" data-sortable-id="table-basic-1">
@@ -21,8 +23,9 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Default Table</h4>
+                    <h4 class="panel-title">Tabla Moneda Tipo</h4>
                 </div>
+
                 <div class="panel-body">
                     <table class="table table-striped" >
                         <thead>
