table monedas finished

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -51,6 +51,8 @@
                     </table>
                 </div>
             </div>
+            <!-- end panel -->
         </div>
     </div>
+    <!-- end row -->
 </div>
