table monedas finished

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -1,5 +1,5 @@
 
-<div class="container" ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
+<div  ng-controller="tablaMonedaTipoDefaultController" ng-init="cargarMonedas_Tipo()">
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Monedas</a></li>
