table monedas finished

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -27,15 +27,15 @@
                 </div>
 
                 <div class="panel-body">
-                    <table class="table table-striped" >
+                    <table class="table table-striped table-bordered" >
                         <thead>
                         <tr>
                             <th> ID </th>
                             <th> Nombre </th>
                             <th> Codigo ISO </th>
                             <th> Pais</th>
-                            <th>  </th>
-                            <th>  </th>
+                            <th> Editar </th>
+                            <th> Eliminar </th>
                         </tr>
                         </thead>
                         <tbody>
