monedas crear, editar, buscar,eliminar route

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -170,8 +170,8 @@
                 </a>
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
-
-
+                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.crear">Moneda Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.buscar">Moneda Buscar</a></li>
                 </ul>
             </li>
          
