--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -27,6 +27,7 @@
                 </div>
 
                 <div class="panel-body">
+                    <a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a>
                     <table class="table table-striped table-bordered" >
                         <thead>
                         <tr>
