--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -27,8 +27,8 @@
                 </div>
 
                 <div class="panel-body">
-                    <a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a>
-                    <br>
+                    <div><p><a ui-sref="app.moneda_tipo.crear" class="btn btn-success">Nueva Moneda </a></p></div>
+
                     <table class="table table-striped table-bordered" >
                         <thead>
                         <tr>
