--- a/views/moneda_tipo_crear.html
+++ b/views/moneda_tipo_crear.html
@@ -30,7 +30,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ISO ID</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" />
+                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked_input_id"/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -44,7 +44,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Codigo</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo" />
+                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo" id="masked-input-code" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -70,7 +70,3 @@
     </div>
     <!-- end row -->
 </div>
-id {{monet_id}}
-nombre {{monet_nombre}}
-codifo {{monet_codigo}}
-pais {{monet_pais}}
