control input moneda_tipo

--- a/views/moneda_tipo_crear.html
+++ b/views/moneda_tipo_crear.html
@@ -30,7 +30,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ISO ID</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked_input-id"/>
+                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked-input-id"/>
                             </div>
                         </div>
                         <div class="form-group">
