--- a/views/moneda_tipo_crear.html
+++ b/views/moneda_tipo_crear.html
@@ -30,13 +30,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ISO ID</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked-input-id"/>
+                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked-input-id" required="required"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Nombre</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
+                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" required="required" />
                             </div>
 
                         </div>
@@ -44,13 +44,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Codigo</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo" id="masked-input-code" />
+                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo" id="masked-input-code" required="required" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">País</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" />
+                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" required="required"/>
                             </div>
                         </div>
 
