--- a/views/moneda_tipo_crear.html
+++ b/views/moneda_tipo_crear.html
@@ -30,13 +30,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">ISO ID</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id" id="masked-input-id" required="true"/>
+                                <input type="text" class="form-control" placeholder="152" ng-model="monet_id"  />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Nombre</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" required="true"/>
+                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
                             </div>
 
                         </div>
@@ -44,20 +44,20 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Codigo</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo" id="masked-input-code" required="true" />
+                                <input type="text" class="form-control" placeholder="USD" ng_model="monet_codigo"   />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">País</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" required="true"/>
+                                <input type="text" class="form-control" placeholder="ESTADOS UNIDOS DE AMERICA" ng-model="monet_pais" />
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Enviar</label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click="guardarMoneda_Tipo()">Guardar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Guardar</button>
                             </div>
                         </div>
                     </form>
