moneda_tipo editar

--- a/views/moneda_tipo_todos.html
+++ b/views/moneda_tipo_todos.html
@@ -46,7 +46,7 @@
                             <td> {{item.monet_nombre}} </td>
                             <td> {{item.monet_codigo}} </td>
                             <td> {{item.monet_pais}} </td>
-                            <td> <a href="javascript:void(0);" class="btn btn-info" ng-click="editarMoneda(item._id)"> Editar </a> </td>
+                            <td> <a href="/#/app/moneda_tipo/editar/{{item._id}}" class="btn btn-info" > Editar </a> </td>
                             <td> <a href="javascript:void(0);" class="btn btn-danger" ng-click="eliminarMoneda_Tipo(item._id)"> Eliminar </a> </td>
                         </tr>
                         </tbody>
