--- a/views/moneda_tipo_editar.html
+++ b/views/moneda_tipo_editar.html
@@ -1,4 +1,4 @@
-<div ng-controller="MonedaTipoEditarController">
+<div ng-controller="MonedaTipoEditarController" ng-init="recuperarMoneda_Tipo()">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
