new sgt_moneda route app

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -169,6 +169,8 @@
                     <span>Moneda</span>
                 </a>
                 <ul class="sub-menu">
+                    <li ui-sref-active="active"><a ui-sref="app.moneda.todos">Moneda</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.moneda.crear">Moneda Actualizar</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.todos">Moneda Tipos</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.crear">Moneda Crear</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.moneda_tipo.buscar">Moneda Buscar</a></li>
